<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_MqttClient" Id="{86a6db36-3d6c-4ae4-87ab-82cf16b80846}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MqttClient
VAR_INPUT
	sTopicSub	: STRING(255);
	sTopicPub  	: STRING(255);
	sPayloadPub : STRING(255);
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMqttClient : FB_MyMqtt;
	bSubscribed	 : BOOL;
	bSetParameter : BOOL := TRUE;
	bConnect	: BOOL := TRUE;
	bGetValue	: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bSetParameter THEN
    bSetParameter              := FALSE;
    fbMqttClient.sHostName     := '192.168.2.103';
    fbMqttClient.nHostPort     := 1883;
//  fbMqttClient.sClientId     := 'MyTcMqttClient'; 
    fbMqttClient.sTopicPrefix  := ''; 
//  fbMqttClient.nKeepAlive    := 60; 
//  fbMqttClient.sUserName     := ;
//  fbMqttClient.sUserPassword := ; 
//  fbMqttClient.stWill        := ; 
//  fbMqttClient.stTLS         := ;
END_IF

fbMqttClient.Execute(bConnect);

IF fbMqttClient.bConnected THEN
	//Check Subscription of the Topic
	IF NOT bSubscribed THEN
		bSubscribed := fbMqttClient.Subscribe(sTopic:=sTopicSub, eQoS:=TcIotMqttQos.AtMostOnceDelivery);
	END_IF
	
	//If the payload is True, set bool value to TRUE and initiate publish
	IF fbMqttClient.sPayloadRcv = 'true' THEN
		bGetValue := TRUE;
	ELSIF fbMqttClient.sPayloadRcv = 'false' THEN
		bGetValue := FALSE;
	END_IF
	
	IF bGetValue THEN
		fbMqttClient.Publish(sTopic:= sTopicPub,pPayload:= ADR(sPayloadPub), nPayloadSize:= LEN2(ADR(sPayloadPub))+1, eQoS:= TcIotMqttQos.AtMostOnceDelivery, bRetain:= FALSE, bQueue:= FALSE );
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_MqttClient">
      <LineId Id="16" Count="12" />
      <LineId Id="9" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="60" Count="2" />
      <LineId Id="80" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="63" Count="3" />
      <LineId Id="42" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="32" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>